--- a/pages/3879.html
+++ b/pages/3879.html
@@ -471,7 +471,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1114,37 +1114,53 @@ margin-left: 0em;
 
 <p>In the beginning of the 20th century the term was understood very broadly:</p>
 
-<p>&gt; Not only <a class='existingWikiWord' href='/nlab/show/Henri+Poincar%C3%A9'>Henri Poincaré</a>, bu also <a class='existingWikiWord' href='/nlab/show/Albert+Einstein'>Albert Einstein</a>, were called mathematical physicists. Newly established theoretical chairs were called chairs of mathematical physics. It follows from the documents in the archives of the Nobel Committee that MP had a right to appear both in the nominations and discussion of the candidates for the Nobel Prize in physics. Roughly speaking, the concept of Mathematical Physics covered theoretical papers where mathematical formulae were used. (<a href='#Fadeev00'>Fadeev 00, p. 1</a>)</p>
+<blockquote>
+<p>Not only <a class='existingWikiWord' href='/nlab/show/Henri+Poincar%C3%A9'>Henri Poincaré</a>, but also <a class='existingWikiWord' href='/nlab/show/Albert+Einstein'>Albert Einstein</a>, were called mathematical physicists. Newly established theoretical chairs were called chairs of mathematical physics. It follows from the documents in the archives of the Nobel Committee that MP had a right to appear both in the nominations and discussion of the candidates for the Nobel Prize in physics. Roughly speaking, the concept of Mathematical Physics covered theoretical papers where mathematical formulae were used. (<a href='#Fadeev00'>Fadeev 00, p. 1</a>)</p>
+</blockquote>
 
 <p>Also, in the list of <a class='existingWikiWord' href='/nlab/show/Hilbert%27s+problems'>Hilbert&#39;s problems</a> of mathematics, the <a class='existingWikiWord' href='/nlab/show/Hilbert%27s+sixth+problem'>sixth problem</a> regards the mathematical formulation of physics as one of the core problems in mathematics:</p>
 
-<p>&gt; <strong>6. Mathematical Treatment of the Axioms of Physics.</strong> The investigations on the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations</a> of <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a> suggest the problem: To treat in the same manner, by means of <a class='existingWikiWord' href='/nlab/show/axiom'>axioms</a>, those <a class='existingWikiWord' href='/nlab/show/physics'>physical sciences</a> in which already today <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> plays an important part; in the first rank are the <a class='existingWikiWord' href='/nlab/show/probability+theory'>theory of probabilities</a> and <a class='existingWikiWord' href='/nlab/show/mechanics'>mechanics</a>.</p>
+<blockquote>
+<p><strong>6. Mathematical Treatment of the Axioms of Physics.</strong> The investigations on the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations</a> of <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a> suggest the problem: To treat in the same manner, by means of <a class='existingWikiWord' href='/nlab/show/axiom'>axioms</a>, those <a class='existingWikiWord' href='/nlab/show/physics'>physical sciences</a> in which already today <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> plays an important part; in the first rank are the <a class='existingWikiWord' href='/nlab/show/probability+theory'>theory of probabilities</a> and <a class='existingWikiWord' href='/nlab/show/mechanics'>mechanics</a>.</p>
+</blockquote>
 
 <p>However, the 1920 and 1930s the term “mathematical physics” began to be reserved more exclusively for the activity of making precise arguments that are already more or less understood by theoretical physicists informally. The term began to be referred to mathematical tools used in physics or yet more specifically in <a class='existingWikiWord' href='/nlab/show/classical+physics'>classical physics</a> as the theory of <a class='existingWikiWord' href='/nlab/show/differential+equation'>partial differential equations</a> and <a class='existingWikiWord' href='/nlab/show/variational+calculus'>variational calculus</a> and in <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a> as <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a> and <a class='existingWikiWord' href='/nlab/show/representation+theory'>representation theory</a>.</p>
 
-<p>&gt; One sees the quest for the rigorous mathematical theorems about results which are understood by physicists in their own way. (<a href='#Fadeev00'>Fadeev 00, p. 2</a>)</p>
+<blockquote>
+<p>One sees the quest for the rigorous mathematical theorems about results which are understood by physicists in their own way. (<a href='#Fadeev00'>Fadeev 00, p. 2</a>)</p>
+</blockquote>
 
 <p>More recently this narrow understanding has been called into question: <a href='#Fadeev00'>Fadeev 00, p. 3</a> writes:</p>
 
-<p>&gt; I consider as the main goal of Mathematical Physics the use of mathematical intuition for the derivation of really new results in the fundamental physics. In this sense, Mathematical Physics and Theoretical Physics are competitors. Their goals in unraveling the laws of the structure of matter coincide. However, the methods and even the estimates of the importance of the results of work may differ quite significally.</p>
+<blockquote>
+<p>I consider as the main goal of Mathematical Physics the use of mathematical intuition for the derivation of really new results in the fundamental physics. In this sense, Mathematical Physics and Theoretical Physics are competitors. Their goals in unraveling the laws of the structure of matter coincide. However, the methods and even the estimates of the importance of the results of work may differ quite significally.</p>
+</blockquote>
 
 <p>In a similar spirit of trying to break out of an overly restrictive understanding of the term “mathematical physics” <a class='existingWikiWord' href='/nlab/show/Gregory+Moore'>Gregory Moore</a> has been advocating the alternative term <strong>physical mathematics</strong> for the study of mathematical constructions inspired by models of theoretical physics (<a href='#Moore14'>Moore 14</a>).</p>
 
 <p>Some of the greatest names of mathematical physics have sought a more profound role for it in the belief that very deep mathematical ideas are required to describe nature. For instance, <a class='existingWikiWord' href='/nlab/show/Paul+Dirac'>Paul Dirac</a> expresses such a view here:</p>
 
-<p>&gt; It seems to be one of the fundamental features of nature that fundamental physical laws are described in terms of a mathematical theory of great beauty and power, needing quite a high standard of mathematics for one to understand it. You may wonder: Why is nature constructed along these lines? One can only answer that our present knowledge seems to show that nature is so constructed. We simply have to accept it. One could perhaps describe the situation by saying that God is a mathematician of a very high order, and He used very advanced mathematics in constructing the universe. (Paul Dirac, <em>The Evolution of the Physicist’s Picture of Nature</em>, Scientific American 1963)</p>
+<blockquote>
+<p>It seems to be one of the fundamental features of nature that fundamental physical laws are described in terms of a mathematical theory of great beauty and power, needing quite a high standard of mathematics for one to understand it. You may wonder: Why is nature constructed along these lines? One can only answer that our present knowledge seems to show that nature is so constructed. We simply have to accept it. One could perhaps describe the situation by saying that God is a mathematician of a very high order, and He used very advanced mathematics in constructing the universe. (Paul Dirac, <em>The Evolution of the Physicist’s Picture of Nature</em>, Scientific American 1963)</p>
+</blockquote>
 
 <p>This view led Dirac to advocate the following as a methodology:</p>
 
-<p>&gt;The trend of mathematics and physics towards unification provides the physicist with a powerful new method of research into the foundations of his subject, a method which has not yet been applied successfully, but which I feel confident will prove its value in the future. The method is to begin by choosing that branch of mathematics which one thinks will form the basis of the new theory. One should be influenced very much in this choice by considerations of mathematical beauty. It would probably be a good thing also to give a preference to those branches of mathematics that have an interesting group of transformations underlying them, since transformations play an important role in modern physical theory, both relativity and quantum theory seeming to show that transformations are of more fundamental importance than equations. Having decided on the branch of mathematics, one should proceed to develop it along suitable lines, at the same time looking for that way in which it appears to lend itself naturally to physical interpretation. (<a href='http://www.damtp.cam.ac.uk/events/strings02/dirac/speach.html'>The Relation between Mathematics and Physics</a>)</p>
+<blockquote>
+<p>The trend of mathematics and physics towards unification provides the physicist with a powerful new method of research into the foundations of his subject, a method which has not yet been applied successfully, but which I feel confident will prove its value in the future. The method is to begin by choosing that branch of mathematics which one thinks will form the basis of the new theory. One should be influenced very much in this choice by considerations of mathematical beauty. It would probably be a good thing also to give a preference to those branches of mathematics that have an interesting group of transformations underlying them, since transformations play an important role in modern physical theory, both relativity and quantum theory seeming to show that transformations are of more fundamental importance than equations. Having decided on the branch of mathematics, one should proceed to develop it along suitable lines, at the same time looking for that way in which it appears to lend itself naturally to physical interpretation. (<a href='http://www.damtp.cam.ac.uk/events/strings02/dirac/speach.html'>The Relation between Mathematics and Physics</a>)</p>
+</blockquote>
 
 <p><a class='existingWikiWord' href='/nlab/show/Hermann+Weyl'>Hermann Weyl</a> helped develop many of the ingredients of modern mathematical physics, as <a class='existingWikiWord' href='/nlab/show/Michael+Atiyah'>Michael Atiyah</a> explains:</p>
 
-<p>&gt;The past 25 years have seen the rise of gauge theories–Kaluza-Klein models of high dimensions, string theories, and now M-theory, as physicists grapple with the challenge of combining all the basic forces of nature into one all embracing theory. This requires sophisticated mathematics involving Lie groups, manifolds, differential operators, all of which are part of Weyl’s inheritance. There is no doubt that he would have been an enthusiastic supporter and admirer of this fusion of mathematics and physics. No other mathematician could claim to have initiated more of the theories that are now being explored. His vision has stood the test of time. (Michael Atiyah, <em>Hermann Weyl: 1885-1955</em>)</p>
+<blockquote>
+<p>The past 25 years have seen the rise of gauge theories–Kaluza-Klein models of high dimensions, string theories, and now M-theory, as physicists grapple with the challenge of combining all the basic forces of nature into one all embracing theory. This requires sophisticated mathematics involving Lie groups, manifolds, differential operators, all of which are part of Weyl’s inheritance. There is no doubt that he would have been an enthusiastic supporter and admirer of this fusion of mathematics and physics. No other mathematician could claim to have initiated more of the theories that are now being explored. His vision has stood the test of time. (Michael Atiyah, <em>Hermann Weyl: 1885-1955</em>)</p>
+</blockquote>
 
-<p>&gt;[Weyls] contemporaries are long since gone and only a few personal reminiscences survive. On the other hand the passage of time makes it easier to assess the long-term significance of Weyl’s work, to see how his ideas have influenced his successors and helped to shape mathematics and physics in the second half of the twentieth century. In fact, the last fifty years have seen a remarkable blossoming of just those areas that Weyl initiated. In retrospect one might almost say that he defined the agenda and provided the proper framework for what followed. He made fundamental contributions to most branches of mathematics, and he also took a serious interest in theoretical physics. (Michael Atiyah, <em>Hermann Weyl: 1885-1955</em>)</p>
+<blockquote>
+<p>[Weyls] contemporaries are long since gone and only a few personal reminiscences survive. On the other hand the passage of time makes it easier to assess the long-term significance of Weyl’s work, to see how his ideas have influenced his successors and helped to shape mathematics and physics in the second half of the twentieth century. In fact, the last fifty years have seen a remarkable blossoming of just those areas that Weyl initiated. In retrospect one might almost say that he defined the agenda and provided the proper framework for what followed. He made fundamental contributions to most branches of mathematics, and he also took a serious interest in theoretical physics. (Michael Atiyah, <em>Hermann Weyl: 1885-1955</em>)</p>
+</blockquote>
 
-<p>The version of this belief in the necessity of deep mathematics for physics to be found at the <math class='maruku-mathml' display='inline' id='mathml_f5ae6c38c04199d24ff2500a00749805899dc918_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab is, naturally enough, that higher categories, and in particular cohesive <math class='maruku-mathml' display='inline' id='mathml_f5ae6c38c04199d24ff2500a00749805899dc918_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty, 1)</annotation></semantics></math>-toposes, are required. In this regard, see <a class='existingWikiWord' href='/nlab/show/higher+category+theory+and+physics'>higher category theory and physics</a>, <a class='existingWikiWord' href='/nlab/show/geometry+of+physics'>geometry of physics</a> and <a href='http://ncatlab.org/schreiber/show/differential+cohomology+in+a+cohesive+topos#Subprojects'>differential cohomology in a cohesive topos</a>.</p>
+<p>The version of this belief in the necessity of deep mathematics for physics to be found at the <math class='maruku-mathml' display='inline' id='mathml_e42f537750c895dff018a9961b4a2a71fa51ef3b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab is, naturally enough, that higher categories, and in particular cohesive <math class='maruku-mathml' display='inline' id='mathml_e42f537750c895dff018a9961b4a2a71fa51ef3b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty, 1)</annotation></semantics></math>-toposes, are required. In this regard, see <a class='existingWikiWord' href='/nlab/show/higher+category+theory+and+physics'>higher category theory and physics</a>, <a class='existingWikiWord' href='/nlab/show/geometry+of+physics'>geometry of physics</a> and <a href='http://ncatlab.org/schreiber/show/differential+cohomology+in+a+cohesive+topos#Subprojects'>differential cohomology in a cohesive topos</a>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -1167,7 +1183,7 @@ margin-left: 0em;
 <blockquote>
 <p>“One should keep the need for a sound mathematical basis dominating one’s search for a new theory. Any physical or philosophical ideas that one has must be adjusted to fit the mathematics. Not the way round.</p>
 
-<p>Too many physicists are inclined to start from some preconceived physical ideas and then to try to develop them and ﬁnd a mathematical scheme that incorporates them. Such a line of attack is unlikely to lead to success. One runs into difficulties and ﬁnds no reasonable way out of them. One ought then to realize that one’s whole line of approach is wrong and to seek a new starting point with a sound mathematical basis.“</p>
+<p>Too many physicists are inclined to start from some preconceived physical ideas and then to try to develop them and ?nd a mathematical scheme that incorporates them. Such a line of attack is unlikely to lead to success. One runs into difficulties and ?nds no reasonable way out of them. One ought then to realize that one’s whole line of approach is wrong and to seek a new starting point with a sound mathematical basis.“</p>
 </blockquote>
 
 <ul>
@@ -1227,14 +1243,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 23, 2017 18:10:04 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  Revised on March 18, 2018 09:52:19 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (86.139.161.234)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mathematical+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mathematical+physics/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/mathematical+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mathematical+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/mathematical+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mathematical+physics/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/mathematical+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mathematical+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
