--- a/pages/17030.html
+++ b/pages/17030.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -663,7 +663,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Beilinson-Bernstein+localization'>Beĭlinson-Bernstein localization</a></p>
+<p><span class='newWikiWord'>Be?linson-Bernstein localization<a href='/nlab/new/Be%3Flinson-Bernstein+localization'>?</a></span></p>
 </li>
 
 <li>
@@ -825,7 +825,13 @@ margin-left: 0em;
 <p>but beware that <a href='#Scull01'>Scull 01</a> claims that the statement about minimal model there is not correct. Corrrected statements for finite groups as well as generalization to <a class='existingWikiWord' href='/nlab/show/compact+Lie+group'>compact Lie groups</a>, at least to the <a class='existingWikiWord' href='/nlab/show/circle+group'>circle group</a>, is due to</p>
 
 <ul>
-<li id='Scull01'>Laura Scull, <em>Rational <math class='maruku-mathml' display='inline' id='mathml_a0fa84b106d95cb993ccdfdbcad6faa845d0ce47_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>S^1</annotation></semantics></math>-equivariant homotopy theory</em>, Transactions of the AMS, Volume 354, Number 1, Pages 1-45 2001 (<a href='http://www.ams.org/journals/tran/2002-354-01/S0002-9947-01-02790-8/S0002-9947-01-02790-8.pdf'>pdf</a>)</li>
+<li id='Scull01'>Laura Scull, <em>Rational <math class='maruku-mathml' display='inline' id='mathml_f28689b6efb7ffc1e92d350195f92a7667004774_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>S^1</annotation></semantics></math>-equivariant homotopy theory</em>, Transactions of the AMS, Volume 354, Number 1, Pages 1-45 2001 (<a href='http://www.ams.org/journals/tran/2002-354-01/S0002-9947-01-02790-8/S0002-9947-01-02790-8.pdf'>pdf</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>C. Allday, V. Puppe, sections 3.3 and 3.4 of <em>Cohomological methods in transformation groups</em>, Cambridge 1993 (<a href=' https://doi.org/10.1017/CBO9780511526275'>doi:10.1017/CBO9780511526275</a>)</li>
 </ul>
 
 <p>
@@ -833,14 +839,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 30, 2017 10:03:55 
+  Revised on March 18, 2018 13:42:06 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.41.134.32)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+rational+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+rational+homotopy+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/equivariant+rational+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+rational+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+rational+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+rational+homotopy+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/equivariant+rational+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+rational+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
