--- a/pages/15519.html
+++ b/pages/15519.html
@@ -640,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -985,17 +985,31 @@ margin-left: 0em;
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
 </div>
 
 <h2 id='properties'>Properties</h2>
 
-<p>…</p>
+<p>The main characterization of injective toposes is achieved by the folowing result due to Johnstone-Joyal (<a href='#JJ82'>1982</a>).</p>
+
+<div class='num_prop'>
+<h6 id='theorem'>Theorem</h6>
+
+<p>There is an equivalence of 2-categories between the full sub-2-category of <math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> with 0-cells the injective toposes and the 2-category of cocomplete ind-small <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous categories</a> with 1-cells the filtered colimit preserving functors. This equivalence sends an injective topos to its <a class='existingWikiWord' href='/nlab/show/fibration+of+points'>category of points</a>.</p>
+</div>
+
+<div class='num_prop'>
+<h6 id='proposition'>Proposition</h6>
+
+<p>The lex totally distributive categories with a small dense generator are precisely the injective Grothendieck toposes.</p>
+</div>
+
+<p>This occurs as theorem 4.5 in Lucyshyn-Wright (<a href='#LW11'>2011</a>).</p>
 
 <h2 id='example'>Example</h2>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_6b2f7026efd7d69c587b6808373e481617c59c78_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Set</mi></mrow><annotation encoding='application/x-tex'>Set</annotation></semantics></math> is the only injective <a class='existingWikiWord' href='/nlab/show/Boolean+topos'>Boolean topos</a> (cf <a href='#JT02'>Johnstone 2002</a>, p.740).</li>
+<li><math class='maruku-mathml' display='inline' id='mathml_baf1cabf0cc9c82970e8a920422c835a9a61075e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Set</mi></mrow><annotation encoding='application/x-tex'>Set</annotation></semantics></math> is the only injective <a class='existingWikiWord' href='/nlab/show/Boolean+topos'>Boolean topos</a> (cf <a href='#JT02'>Johnstone 2002</a>, p.740).</li>
 </ul>
 
 <h2 id='related_entries'>Related entries</h2>
@@ -1007,6 +1021,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/totally+distributive+category'>totally distributive category</a></p>
 </li>
 
 <li>
@@ -1032,18 +1050,22 @@ margin-left: 0em;
 <li id='JJ82'>
 <p><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a>, <em>Continuous categories and exponentiable toposes</em> , JPAA <strong>25</strong> (1982) pp.255-296.</p>
 </li>
+
+<li id='LW11'>
+<p><a class='existingWikiWord' href='/nlab/show/Rory+Lucyshyn-Wright'>Rory Lucyshyn-Wright</a>, <em>Totally distributive toposes</em> , arXiv:1108.4032 (2011). (<a href='https://arxiv.org/abs/1108.4032'>abstract</a>)</p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on March 16, 2018 10:05:40 
+  Revised on March 19, 2018 08:54:42 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (82.113.121.14)
+  (82.113.121.98)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/injective+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injective+topos/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/injective+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injective+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/injective+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injective+topos/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/injective+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injective+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
